gitops/base/istio-security/execution-peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: execution
spec:
  mtls:
    mode: STRICT
