gitops/base/istio-security/workloads-peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: workloads
spec:
  mtls:
    mode: STRICT
