gitops/base/istio-security/execution-default-deny-authorization.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: default-deny
  namespace: execution
spec:
  action: ALLOW
  rules: []
