gitops/base/istio-security/workloads-default-deny-authorization.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: default-deny
  namespace: workloads
spec:
  action: ALLOW
  rules: []
